<resources>
    <string name="app_name">blablawild</string>
    <string name="boutonRechercher">RECHERCHER</string>
    <string name="trajetAller">Trajet aller</string>
    <string name="trajetRetour">Trajet retour</string>
    <string name="date">Date du voyage</string>
    <string name="boutonRechercher2">RECHERCHER</string>
    <string name="toast">Renseigner le depart et la destination</string>
    <string name="fleche">"--->"</string>
    <string name="buttonPublier">PUBLIER</string>
    <string name="depart">Départ</string>
    <string name="Destination">Destination</string>
    <string name="Prix">Prix</string>
    <string name="Date">Date</string>
    <string name="Heure">Heure</string>
    <string name="Proposer">Proposer un itinéraire</string>
    <string name="disconnect">Deconnecter</string>
    <string name="Signup">Sign up</string>
    <string name="Signin">Sign in</string>
    <string name="Register">Register</string>
    <string name="auth_failed">il y a une erreur dans l"'"authentification</string>
    <string name="email">E-mail</string>
    <string name="pseudo">Pseudo</string>
    <string name="password">Password</string>
    <string name="e_mail">e-mail</string>
    <string name="signinpassword">Password</string>
    <string name="s_enregistrer">S\'ENREGISTRER</string>
    <string name="menu">Menu</string>
    <string name="motdepasse">tu n\'as pas remplis ton password</string>
</resources>
