<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.apprenti.blablawild.Signup">


    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:hint="@string/email"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        android:ems="10"
        android:inputType="textPersonName"
         />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="84dp"
        android:text="@string/Register" />

    <EditText
        android:id="@+id/editTextPseudo"
        android:hint="@string/pseudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextPassword"
        android:layout_alignLeft="@+id/editTextEmail"
        android:layout_alignStart="@+id/editTextEmail"
        android:layout_marginBottom="84dp"
        android:ems="10"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/editTextPassword"
        android:hint="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginBottom="63dp"
        android:layout_above="@+id/buttonRegister"
        android:layout_alignLeft="@+id/editTextEmail"
        android:layout_alignStart="@+id/editTextEmail" />
</RelativeLayout>
